--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </div> 
 
-    <script src="src/script.js" defer></script>
+    <script src="script.js" defer></script>
 
   </body>
 </html>
