--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -20,13 +20,44 @@
         </button>
       </section>
 
-      <ul id="ullist">
-        
+      <ul id="ullist">   
       </ul>
-
     </div> 
+
+    <li class="flex flex-col justify-between bg-[#f9f9f9] p-[10px] my-[16px] mx-[0] rounded-[5px] drop-shadow-2xl text-center "></li>
+
+    <button class="bg-[#c9302c] text-white border-none rounded-[5px] py-[5px] px-[10px] cursor-pointer my-[7px] mx-[0]"></button>
+
+
 
     <script src="script.js" defer></script>
 
   </body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To-Do List</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>To-Do List</h1>
+        </header>
+
+        <section class="input-section">
+            <input type="text" id="InputField" placeholder="Enter new task...">
+            <button id="btn">Add Task</button>
+        </section>
+
+        <ul id="ULlist"></ul>
+    </div>
+
+    <script src="script.js"></script>
+</body>
 </html>
